 - [ZBX-3999] fixed map border (Alex,Sasha,Eduard)
 - [ZBXNEXT-918] redesign Administration->Media types (Eduard)
 - [ZBXNEXT-915] redesign Administration->Authentication (Eduard)
 - [ZBXNEXT-966] update jQuery to 1.6.4 (Eduard)
 - [ZBX-1357] updated Dutch, German, Japanese, Russian, and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
 - [ZBX-3745] fixed error message when link template with discovery rule to host that does not have needed interface (Vedmak)
 - [ZBX-3896] fixed broken triggers after removed item that is used in trigger (Vedmak)
 - [ZBX-4106] fixed layout of "Status of host triggers" screen element (Vedmak)
 - [ZBX-4061] fixed errors when try to delete already deleted regular expression (Vedmak)
 - [ZBX-4058] fixed working time updating in Administration->Gneral->Working time (Vedmak)
 - [ZBX-4060] fixed error when save map with link updated to connect new element (Vedmak)
 - [ZBX-4166] fixed error in dashboard when configured to show unacknowledged only (Vedmak)
 - [ZBX-4003] fixed error when try to use not existing host group as group for discovered hosts (Vedmak)
 - [ZBX-2882] fixed wrong item vfs.file.cksum[/vmlinuz] for some templates (Sasha)
 - [ZBX-3707] fixed possible empty action conditions (Vedmak)
 - [ZBX-4171] fixed server crash in add_value_suffix() under DebugLevel=4 (asaveljevs)
 - [ZBX-3930] fixed errors when return to some specific screens from profile screen (Vedmak)
 - [ZBX-3400] fixed calculation of graph header font size, Zabbix will decrease it to fit graph width (Alexei)
 - [ZBX-4105] fixed removal of host groups in configuration of dashboard, thanks to Pustovalov Alexey (Alexei)
 - [ZBX-3939] fixed warning messages when looking at the history of several selected log items (Alexei)
 - [ZBX-3493] fixed warnings when removing and clearing a template (Alexei)
 - [ZBX-4143] fixed cases with upgrade patch sometimes attempting to reference tables that were not created yet (Richlv, Sasha)